--- a/index.html
+++ b/index.html
@@ -27,9 +27,22 @@
             <div><img src="assets/Banner Image.png" alt=""></div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <div class="left">
+                <div class="button">
+
+                    <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                    <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                    <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                </div>
+            </div>
+            <div id="box1" class="left"></div>
+        </div>
+    </section>
     <section class="blog">
-        <div class="box1"></div>
-        <div class="box2"></div>
+        <div class="box"></div>
+        <div id="" class="box"></div>
     </section>
 
 </body>
