--- a/index.html
+++ b/index.html
@@ -5,46 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>world cup</title>
-    <script src="https://kit.fontawesome.com/e6243ed09b.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="assets/Banner Image.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">
+    <title>World cup</title>
+
+    <style>
+        body {
+            background-color: beige;
+        }
+
+        section {
+            display: flex;
+            justify-content: center;
+            border: 1px solid rebeccapurple;
+
+        }
+
+        .top {
+            display: flex;
+            justify-content: center;
+            background-color: black;
+            color: beige;
+            border-radius: 10px;
+
+        }
+    </style>
 </head>
 
 <body>
     <section>
-        <div class="top-container">
-            <div>
-                <h1>The Greatest
-                    show on the
-                    earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply
-
-                    random text. It has roots in a piece of classical Latin literature
-                    from 45 BC, making it over 2000 years old..</p>
-                <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+        <div class="top">
+            <div class="top-bannartext" style=" padding: 20px ;">
+                <h1>Lorem ipsum dolor sit. </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, doloremque.
+                </p>
+                <a href="">watch live</a>
             </div>
-            <div><img src="assets/Banner Image.png" alt=""></div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="left">
-                <div class="button">
-
-                    <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
-                    <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
-                    <a href="">Watch Live <i class="fa-solid fa-arrow-right-to-bracket"></i></a>
-                </div>
+            <div class="topbannerimg" style="height: auto;">
+                <img src=" assets/Banner Image.png" alt="">
             </div>
-            <div id="box1" class="left"></div>
         </div>
-    </section>
-    <section class="blog">
-        <div class="box"></div>
-        <div id="" class="box"></div>
-    </section>
 
+    </section>
 </body>
 
 </html>
