--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         section {
             display: flex;
             justify-content: center;
-            border: 1px solid rebeccapurple;
+            border: 1px solid red;
 
         }
 
