--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>World cup</title>
 
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             background-color: beige;
         }
@@ -16,6 +21,8 @@
             display: flex;
             justify-content: center;
             border: 1px solid red;
+            margin-bottom: 1vw;
+            background-color: brown;
 
         }
 
@@ -31,8 +38,9 @@
 </head>
 
 <body>
+    <!-- ....................................  -->
     <section>
-        <div class="top">
+        <div class="top" style="width: 70%;">
             <div class="top-bannartext" style=" padding: 20px ;">
                 <h1>Lorem ipsum dolor sit. </h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, doloremque.
@@ -42,6 +50,158 @@
             <div class="topbannerimg" style="height: auto;">
                 <img src=" assets/Banner Image.png" alt="">
             </div>
+        </div>
+
+    </section>
+    <!-- ..............................................  -->
+    <section>
+        <div class="top" style="width: 70%;">
+            <div class="top-bannartext2" style=" width:10%; ;background-color: blue;">
+                <div style="background-color: blueviolet; margin: 5px; text-align: center; padding: 5px;">
+                    <a style="padding: 1% 2%; background-color: orangered; color: aliceblue ;" href="">watch
+                        live</a>
+                    <a style="padding: 1% 2%; background-color: orangered; color: aliceblue ;" href="">watch
+                        live</a>
+                    <a style="padding: 1% 2%; background-color: orangered; color: aliceblue ;" href="">watch
+                        live</a>
+                    <a style="padding: 1% 2%; background-color: orangered; color: aliceblue ;" href="">watch
+                        live</a>
+
+                </div>
+
+            </div>
+            <div class="topbannerimg"
+                style="height: auto; width: 90%; display: grid; grid-template-columns: repeat(3,1fr);">
+                <!-- start blog  -->
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <div style="padding: 5%; background-color: aqua; margin: 1%;">
+                    <div><img style="width: 90%; height: 90%;" src="assets/Flag.png" alt=""></div>
+                    <div>
+
+                        <h4>ij ki lkj khu kjh </h4>
+                        <p>tfyt fyfy fyfyt gg hhft huuj jtg srgfth jju olpk hyg</p>
+                        <button>jokhj</button>
+                    </div>
+                </div>
+                <!-- .......................  -->
+            </div>
+
         </div>
 
     </section>
