--- a/index.html
+++ b/index.html
@@ -205,6 +205,20 @@
         </div>
 
     </section>
+    <section>
+        <div class="top" style="width: 70%;">
+            <div class="top-bannartext" style=" padding: 20px ;">
+                <h1>Lorem ipsum dolor sit. </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, doloremque.
+                </p>
+                <a href="">watch live</a>
+            </div>
+            <div class="topbannerimg" style="height: auto;">
+                <img src=" assets/Banner Image.png" alt="">
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
