--- a/index.html
+++ b/index.html
@@ -205,20 +205,20 @@
         </div>
 
     </section>
-    <section>
-        <div class="top" style="width: 70%;">
-            <div class="top-bannartext" style=" padding: 20px ;">
+
+    <footer style="display: flex; justify-content: center; align-items: center; background-color: black; ">
+        <div class="top" style="width: 70%; text-align: center; padding: 10vw 0vw;">
+            <div class="top-bannartext" style=" width: 100%; padding: 20px ; align-items: center;">
                 <h1>Lorem ipsum dolor sit. </h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, doloremque.
                 </p>
+                <hr>
                 <a href="">watch live</a>
             </div>
-            <div class="topbannerimg" style="height: auto;">
-                <img src=" assets/Banner Image.png" alt="">
-            </div>
+
         </div>
 
-    </section>
+    </footer>
 </body>
 
 </html>
